# sprovider

./: .gitignore  README.md  pyproject.toml
provider/: __init__.py  app.py  checker.py  provider.py  types.py
